# retrieval-drone-system

./: .gitignore  AGENTS.md  BOARD.md  CLAUDE.md  CONCEPTS.md  ChatGPT Tracking Visualisation System Design.md  CopilotServoCOntrol.md  DIY Drone Electronics for Ball Retrieval.md  README.md  STRATEGY.md  opencode.json
.claude/rules/: adr.md  cpp.md  project-docs.md  python.md  solutions.md  tickets.md
.github/: copilot-instructions.md
.github/instructions/: adr-governance.instructions.md  board.instructions.md  cpp-hot-path.instructions.md  python-tooling.instructions.md  solutions.instructions.md  tickets.instructions.md  tracking-architecture.instructions.md  tracking-review.instructions.md
.opencode/agents/: explore.md  researcher.md  reviewer.md  safety-reviewer.md
.opencode/commands/: agents.md  board.md  finish-ticket.md  help.md  next-ticket.md  review.md  start-ticket.md  ticket-archive.md
.remember/: now.md  recent.md
Claude Synthesised/: ADR-002-zeromq-control-transport.md  ADR-003-graceful-coordinate-degradation.md  ADR-004-hybrid-calibration-lifecycle.md  ADR-006-floor-plane-2d-world-frame.md  ADR-007-geometric-safe-for-control-predicate.md  ADR-008-laser-controller-adapter.md  README.md
camera-node/poc/: README.md  deploy_and_verify.sh  mjpeg_web_relay.py  start_stream_pi3b.sh  test_mjpeg_parser.py
docs/: board-archive.md  dependency-graph.md  implementation-session-prompt.md  opencode-session-continuity.md  opencode-startup.md  v0.3-execution-guide.md
docs/adr/: ADR-001-hybrid-cpp-python.md  ADR-005-active-laser-modulation.md  ADR-007-geometric-safe-for-control-predicate.md  ADR-009-active-calibration-refinement-proposed.md  ADR-010-object-class-z-compensation.md  README.md
docs/agent-reference/: agent-reference.md
docs/plans/: 001-z2-opencode-web-setup.md  002-fix-docs-006-review-findings.md  2026-07-15-001-feat-trk-004-async-logger-plan.md  2026-07-17-001-feat-detection-calibration-cluster-plan.md  2026-07-18-001-feat-v03-vertical-slice-plan.md  2026-07-21-001-feat-modulation-laser-detector-plan.md
docs/research/: Gemini Building a Home Drone - Design Brainstorm.md  Gemini Drone Ball Retrieval System Design Review.md
docs/solutions/: README.md
docs/tickets/: CAM-001-pi3b-camera-streaming.md  CAM-002-poc-pi3b-to-pi5-camera-streaming-with-web-viewer.md  DOCS-001-move-adrs-to-docs-adr.md  DOCS-002-move-research-md-files.md  DOCS-006-reconcile-layout-with-multi-subsystem-structure.md  LASER-001-laser-controller-adapter.md  LASER-002-mcu-firmware.md  LASER-003-closed-loop-aiming.md  LASER-004-servo-characterisation.md  MAV-001-mavlink-adapter.md  META-004-adopt-u-ids-in-plans.md  META-005-adopt-parallel-safety-check.md  META-006-build-board-automation-scripts.md  META-007-plant-board-script-discovery.md  META-008-install-procedure.md  META-009-operator-startup-script.md  META-010-adr-and-solution-doc-scaffolding-scripts.md  META-011-opencode-help-and-agents-discovery-commands.md  META-012-ticket-archive-command-wrapper.md  META-013-explicit-bash-allow-list-in-opencodejson.md  META-014-board-scripts-preserve-optional-front-matter-fields.md  TRK-001-rename-tracking-system-to-tracking-core.md  TRK-002-build-system-overhaul.md  (+38 more)
tools/: pi-power-check.sh  pi5-remote-test.sh  record-scenarios-pi3b.sh
tracking-core/: .gitignore  CMakeLists.txt  README.md  requirements.txt
tracking-core/benchmarks/: CMakeLists.txt  psd_strategy_bench.cpp
tracking-core/config/: tracking_core.yaml
tracking-core/src/core/: CMakeLists.txt  camera_source.cpp  capture_thread.cpp  config.cpp  frame_quality.cpp  logging.cpp  main.cpp  replay_source.cpp
tracking-core/src/core/coordinate/: coordinate_mapper.cpp  homography_loader.cpp
tracking-core/src/core/export/: export_thread.cpp  zmq_publisher.cpp
tracking-core/src/core/include/: ball_detector.hpp  calibration_marker_detector.hpp  camera_source.hpp  capture_thread.hpp  config.hpp  coordinate_mapper.hpp  export_thread.hpp  frame_metadata.hpp  frame_quality.hpp  frame_ring_buffer.hpp  frame_source.hpp  homography_loader.hpp  logging.hpp  modulation_detector.hpp  replay_source.hpp  safe_for_control.hpp  snapshot_builder.hpp  spsc_ring.hpp  track.hpp  tracker.hpp  tracking_pipeline.hpp  tracking_snapshot.hpp  zmq_publisher.hpp
tracking-core/src/core/safety/: safe_for_control.cpp
tracking-core/src/core/tracking/: ball_detector.cpp  calibration_marker_detector.cpp  detector.cpp  modulation_detector.cpp  snapshot_builder.cpp  track.cpp  tracker.cpp
tracking-core/src/viewer/: client.py  renderer.py  safety_panel.py  schema.py  viewer.py
tracking-core/tests/cpp_unit/: CMakeLists.txt  calibration_fixture.hpp  modulation_fixture.hpp  test_ball_detector.cpp  test_calibration_marker_detector.cpp  test_capture_thread.cpp  test_config.cpp  test_coordinate_mapper.cpp  test_frame_metadata.cpp  test_frame_quality.cpp  test_frame_ring_buffer.cpp  test_homography_loader.cpp  test_logging.cpp  test_logging_default_level.cpp  test_modulation_detector.cpp  test_modulation_fixture.cpp  test_pipeline_tracking.cpp  test_replay_integration.cpp  test_replay_source.cpp  test_safe_for_control.cpp  test_safety_replay.cpp  test_snapshot_builder.cpp  test_spsc_ring.cpp  test_track.cpp  test_tracker.cpp  test_tracking_pipeline.cpp  test_zmq_publisher.cpp
tracking-core/tests/python_integration/: conftest.py  test_calibrate_extrinsics.py  test_calibrate_intrinsics.py  test_synthetic_board.py  test_viewer_schema.py
tracking-core/tools/: calibrate_extrinsics.py  calibrate_intrinsics.py  calibration_common.py  make_bench_calibration.py  record_camera.py
tracking-system/: .gitignore  CMakeLists.txt  README.md  requirements.txt
tracking-system/src/core/: CMakeLists.txt  main.cpp
tracking-system/src/core/include/: tracking_pipeline.hpp
tracking-system/src/core/tracking/: detector.cpp  tracker.cpp
tracking-system/src/viewer/: utils.py  viewer.py
tracking-system/tests/cpp_unit/: CMakeLists.txt  test_tracking_pipeline.cpp
tracking-system/tests/python_integration/: test_viewer_utils.py
tracking-system/tools/: record_camera.py
(+31 files in other folders)
